manifests/nominatim/kustomized.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: nominatim
    app.kubernetes.io/part-of: nominatim
  name: nominatim
  namespace: nominatim
spec:
  ports:
  - name: api
    port: 80
    targetPort: api
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: nominatim
    app.kubernetes.io/part-of: nominatim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/name: postgis
    app.kubernetes.io/part-of: nominatim
  name: postgis
  namespace: nominatim
spec:
  ports:
  - name: pgql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app.kubernetes.io/component: database
    app.kubernetes.io/name: postgis
    app.kubernetes.io/part-of: nominatim
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: nominatim
    app.kubernetes.io/part-of: nominatim
  name: nominatim
  namespace: nominatim
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: nominatim
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
        app.kubernetes.io/name: nominatim
        app.kubernetes.io/part-of: nominatim
    spec:
      containers:
      - image: codeformuenster/nominatim-api:0.1.0
        name: nominatim
        ports:
        - containerPort: 80
          name: api
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/name: postgis
    app.kubernetes.io/part-of: nominatim
  name: postgis
  namespace: nominatim
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: nominatim
  serviceName: postgis
  template:
    metadata:
      labels:
        app.kubernetes.io/component: database
        app.kubernetes.io/name: postgis
        app.kubernetes.io/part-of: nominatim
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          value: n0mn0m
        - name: PGDATA
          value: /var/lib/postgresql/data/pgdata
        image: codeformuenster/postgis-nominatim:0.1.0
        name: postgis
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: data
          subPath: pgdata
      terminationGracePeriodSeconds: 60
  volumeClaimTemplates:
  - metadata:
      labels:
        app.kubernetes.io/part-of: nominatim
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: nominatim
    app.kubernetes.io/part-of: nominatim
  name: nominatim
  namespace: nominatim
spec:
  rules:
  - host: nominatim.codeformuenster.org
    http:
      paths:
      - backend:
          serviceName: nominatim
          servicePort: api
  tls:
  - hosts:
    - nominatim.codeformuenster.org
    secretName: nominatim-tls
